@@ -16,12 +16,13 @@ $(libjitff_a_OBJECTS): $(libjitff_a_DEPENDENCIES)
 libff_a_postflags = -DLUA_FF_LIB=1 -D_NO_PYTHON=1 -DX_DISPLAY_MISSING=1 \
 	-DUSE_OUR_MEMORY=1 \
 	-I$(top_srcdir)/w2c \
+	-I$(top_srcdir)/luatexdir \
 	-I$(top_srcdir)/luatexdir/unilib \
 	-I$(top_srcdir)/luatexdir/luafontloader/fontforge/inc \
 	-I$(top_srcdir)/luatexdir/luafontloader/fontforge/fontforge
 
 libff_a_CPPFLAGS = $(AM_CPPFLAGS) $(LUA_INCLUDES) $(libff_a_postflags)
-libjitff_a_CPPFLAGS = $(AM_CPPFLAGS) $(LUAJIT_INCLUDES) $(libff_a_postflags)
+libjitff_a_CPPFLAGS = $(AM_CPPFLAGS) $(LUAJIT_INCLUDES) -DLuajitTeX $(libff_a_postflags)
 
 libff_a_CFLAGS = # $(WARNING_CFLAGS)
 libjitff_a_CFLAGS = # $(WARNING_CFLAGS)
